--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Verryx-02</title>
 </head>
 <body>
-  <h1>Ciao, sono Verryx-02 👋</h1>
-  <p>Sviluppatore e appassionato di sicurezza, AI e open source.</p>
+  <h1>Hi, Verryx-02 here</h1>
+  <p>boh</p>
 </body>
 </html>
